readme endpoint
